# tsd2gspread

./: README.md  pyproject.toml  renovate.json
src/tsd2gspread/: __init__.py  tsd2gspread.py
tests/: test_tsd2gspread.py
